2007-06-14  John W. Eaton  <jwe@octave.org>

	* oct-procbuf.cc (procbuf::open): Open pipe in binary mode for
	Windows.

	* graphics.h (text::text_properties::rotation): New data member.
	* graphics.cc (text::text_properties::text_properties, 
	text::text_properties::set, text::text_properties::get, 
	text::text_properties::factory_defaults): Handle rotation property.

2007-06-14  David Bateman  <dbateman@free.fr>

	* ov-ch-mat.h (idx_vector index_vector (void) const): Remove
	definition.
	* ov-ch-mat.cc (idx_vector index_vector (void) const): Move it
	here. Special case ":" case for compatibility.

2007-06-13  John W. Eaton  <jwe@octave.org>

	* ov-re-mat.cc (octave_matrix::load_ascii):
	Do a better job of handling read errors and empty matrices.
	* ov-cx-mat.cc (octave_complex_matrix::load_ascii): Likewise.
	* ov-bool-mat.cc (octave_bool_matrix::load_ascii): Likewise.
	* ov-str-mat.cc (octave_char_matrix_str::load_ascii): Likewise.

2007-06-13  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/minmax.cc (MINMAX_BODY): Don't treat as single
	argument if arg2 is empty and nargin=2.

2007-06-13  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h, graphics.cc: Move class declarations to graphics.h.
	Move larger functions outside of class declarations in graphics.cc.

2007-06-12  Benjamin Lindner  <lindnerben@gmx.net>

	* DLD-FUNCTIONS/cellfun.cc: Use fullfile to generate filenames
	instead of assuming / will work as directory separator.

2007-06-12  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/interpn.cc: Remove it.
	* DLD-FUNCTIONS/__lin_interpn__.cc: Move it. This is now a support
	function of interpn.m.
	* Makefile.in (DLD_XSRC): Remove interpn.cc and add __lin_interpn__.cc.

2007-06-07  David Bateman  <dbateman@free.fr>

	* ov-fcn-handles.cc (octave_fcn_handle::save_hdf5): More care that
	all open HDF5 descriptors are closed.
	(octave_fcn_handle::load_hdf5): Ditto.

2007-06-06  Benjamin Lindner  <lindnerben@gmx.net>
